add mvn.sh to use increased memory (necessary for incremental compile). use it instead of $ mvn or start zinc.